--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^5.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-data-table-component": "^6.11.7",
+    "react-data-table-component-extensions": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
