--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.1",
     "react-data-table-component": "^6.11.7",
     "react-data-table-component-extensions": "^1.5.2",
